--- a/index.css
+++ b/index.css
@@ -2,13 +2,13 @@ body {
     background-color: #cbdcee;
     display: flex;
     flex-direction: column;
+    align-items: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .card {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     width: 225px;
     background-color: white;
     border-radius: 20px;
