--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
-body {
+.main {
     background-color: #cbdcee;
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 100vw;
+    height: 100vh;
 }
 
 .card {
@@ -12,6 +14,7 @@ body {
     width: 225px;
     background-color: white;
     border-radius: 20px;
+    margin: auto;
 }
 
 .text {
@@ -19,15 +22,15 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin: 5px 15px 20px 15px;
+    margin: 0 15px 30px 15px;
 }
 
 img {
     border-radius: 10px;
-    margin: 10px;
+    margin: 10px 10px 20px 10px;
 }
 
-h3 {
+.card-header {
     margin: 5px 0 5px 0;
 }
 
